# BOOM

./: .clang-format  .clang-tidy  .codacy.yaml  .dockerignore  .gitignore  .travis.yml  BOOM.hpp  BUILD  COPYRIGHT  CRAN_NOTES  Dockerfile  MODULE.bazel  Makefile  README.md  WORKSPACE  distributions.hpp  gtest.BUILD  install_r_deps  numopt.hpp  requirements.txt  testall  uint.hpp
Bandits/: BinomialBandit.cpp  BinomialBandit.hpp  GenericBanditBase.hpp  LinearBanditEncoder.cpp  LinearBanditEncoder.hpp  LogitBandit.cpp  LogitBandit.hpp  LogitBanditExternalValue.cpp  LogitBanditExternalValue.hpp  PersonalizedBanditBase.hpp  bandit_functions.cpp  bandit_functions.hpp
Bmath/: Bmath.hpp  Random.hpp  bd0.cpp  bessel.hpp  bessel_k.cpp  beta.cpp  chebyshev.cpp  choose.cpp  d1mach.cpp  dbeta.cpp  dbinom.cpp  dcauchy.cpp  dchisq.cpp  dexp.cpp  df.cpp  dgamma.cpp  dgeom.cpp  dhyper.cpp  dlnorm.cpp  dlogis.cpp  dnbeta.cpp  dnbinom.cpp  dnchisq.cpp  dnorm.cpp  dpois.cpp  dpq.hpp  dt.cpp  dunif.cpp  dweibull.cpp  fprec.cpp  fround.cpp  fsign.cpp  ftrunc.cpp  gamma_cody.cpp  gammalims.cpp  i1mach.cpp  lbeta.cpp  lgammacor.cpp  mathlib_error.cpp  mlutils.cpp  (+69 more)
LinAlg/: Array.cpp  Array.hpp  ArrayIterator.cpp  ArrayIterator.hpp  Cholesky.cpp  Cholesky.hpp  CorrelationMatrix.cpp  CorrelationMatrix.hpp  DiagonalMatrix.cpp  DiagonalMatrix.hpp  Eigen.cpp  Eigen.hpp  EigenMap.hpp  Givens.cpp  Givens.hpp  Kronecker.cpp  Kronecker.hpp  LU.cpp  LU.hpp  LinAlgExceptions.cpp  LinAlgExceptions.hpp  Matrix.cpp  Matrix.hpp  MatrixPartition.cpp  MatrixPartition.hpp  MatrixView.hpp  QR.cpp  QR.hpp  SVD.cpp  SVD.hpp  SWEEP.cpp  SWEEP.hpp  Selector.cpp  Selector.hpp  SpdMatrix.cpp  SpdMatrix.hpp  SubMatrix.cpp  SubMatrix.hpp  Vector.cpp  (+8 more)
(+2231 files in other folders)
