# This file works with bazel 9.1 (Homebrew), but the BAZEL environment is very
# unstable.  Very specific versions of googletest and rules_cc need to be given
# here.  This file may need to be edited to work on Linux or with other versions
# of bazel.  Hopefully Google will fix this soon!

bazel_dep(name = "googletest", version = "1.16.0")
bazel_dep(name = "rules_cc", version = "0.2.17")  

git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    branch = "main",
)
